--- a/tweetyzard/tweetyzard.winform/tweetyzard.csproj
+++ b/tweetyzard/tweetyzard.winform/tweetyzard.csproj
@@ -51,7 +51,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>favicon.ico</ApplicationIcon>
+    <ApplicationIcon>favicontw.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DocumentFormat.OpenXml, Version=2.5.5631.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -70,8 +70,6 @@
     <Reference Include="Microsoft.Practices.Unity.Configuration">
       <HintPath>..\packages\Unity.2.1.505.2\lib\NET35\Microsoft.Practices.Unity.Configuration.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -98,14 +96,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomTweetDomain.cs" />
-    <Compile Include="ExcelColumn.cs" />
     <Compile Include="LocalResources\PrintFormatting.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>PrintFormatting.resx</DependentUpon>
     </Compile>
-    <Compile Include="OpenXMLHelper.cs" />
     <Compile Include="tweetyzard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,7 +109,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utility.cs" />
     <EmbeddedResource Include="LocalResources\PrintFormatting.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>PrintFormatting.Designer.cs</LastGenOutput>
@@ -154,7 +148,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="favicon.ico" />
+    <Content Include="favicontw.ico" />
     <Content Include="LocalResources\add_database.png" />
     <Content Include="LocalResources\clock.png" />
     <Content Include="LocalResources\cog.png" />
@@ -203,6 +197,10 @@
       <Project>{ac583672-f6ba-462e-9944-ff8e31f14102}</Project>
       <Name>TweetinviCredentials</Name>
     </ProjectReference>
+    <ProjectReference Include="..\tweetyzard.domain\tweetyzard.domain.csproj">
+      <Project>{3377bf7d-77a8-4b6b-8f9e-00fa2f80a704}</Project>
+      <Name>tweetyzard.domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\tweetyzard.Factories\TweetinviFactories.csproj">
       <Project>{653763cb-4adf-4eb9-89fb-e5f843fb67a9}</Project>
       <Name>TweetinviFactories</Name>
@@ -222,6 +220,10 @@
     <ProjectReference Include="..\tweetyzard.UILibrary\UILibrary.csproj">
       <Project>{6134c033-04b9-4a87-bbca-061ac6aa259a}</Project>
       <Name>UILibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\twetyzard.utility\twetyzard.utility.csproj">
+      <Project>{997349f7-2529-435d-bcca-5292fc929b3e}</Project>
+      <Name>twetyzard.utility</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
