--- a/tweetyzard/tweetyzard.winform/App.config
+++ b/tweetyzard/tweetyzard.winform/App.config
@@ -31,6 +31,7 @@
     <add key="consumerKey" value="UWonynofBt9BMqG1oADno7A5S" />
     <add key="consumerSecret" value="35Oyg54OWocbEpfSCRr97LRGSFfQkQAxrirZSRupBD11hE1uBQ" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="DbConnectionString" value="data source=.;initial catalog=tweetyzard.database;integrated security=True" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
