--- a/tweetyzard/tweetyzard.dataaccess/App.Config
+++ b/tweetyzard/tweetyzard.dataaccess/App.Config
@@ -5,7 +5,6 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-   
   <add name="Entities" connectionString="metadata=res://*/tweetyzardModel.csdl|res://*/tweetyzardModel.ssdl|res://*/tweetyzardModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=tweetyzard.database;integrated security=True;connect timeout=60;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -14,4 +13,7 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <appSettings>
+    <add key="DbConnectionString" value="data source=.;initial catalog=tweetyzard.database;integrated security=True" />
+  </appSettings>
 </configuration>
