--- a/tweetyzard/tweetyzard.winform/App.config
+++ b/tweetyzard/tweetyzard.winform/App.config
@@ -26,10 +26,10 @@
     <add name="TweetModelContainer" connectionString="metadata=res://*/TweetModel.csdl|res://*/TweetModel.ssdl|res://*/TweetModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DemoDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
-    <add key="userKey" value="141853896-cmw6mmv3UOXxHb7h9A5OGPIWopsFHsFGCnX0waBq" />
-    <add key="userSecret" value="o8XmzqWr8VGzoCeyw6XKfWq457PakBmRxS6E9mrEgSKyz" />
-    <add key="consumerKey" value="UWonynofBt9BMqG1oADno7A5S" />
-    <add key="consumerSecret" value="35Oyg54OWocbEpfSCRr97LRGSFfQkQAxrirZSRupBD11hE1uBQ" />
+    <add key="AccessToken" value="YourAppAccessToken" />
+    <add key="AccessTokenSecret" value="YourAppAccessTokenSecret" />
+    <add key="ConsumerKey" value="YourAppConsumerKey" />
+    <add key="ConsumerSecret" value="YourAppConsumerSecret" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="DbConnectionString" value="data source=.;initial catalog=tweetyzard.database;integrated security=True" />
   </appSettings>
