--- a/tweetyzard/tweetyzard.winform/App.config
+++ b/tweetyzard/tweetyzard.winform/App.config
@@ -24,6 +24,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="TweetModelContainer" connectionString="metadata=res://*/TweetModel.csdl|res://*/TweetModel.ssdl|res://*/TweetModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DemoDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/tweetyzardModel.csdl|res://*/tweetyzardModel.ssdl|res://*/tweetyzardModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=tweetyzard.database;integrated security=True;connect timeout=300;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="AccessToken" value="YourAppAccessToken" />
@@ -32,6 +33,7 @@
     <add key="ConsumerSecret" value="YourAppConsumerSecret" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="DbConnectionString" value="data source=.;initial catalog=tweetyzard.database;integrated security=True" />
+    <add key="SaveStreamToDatabase" value="false"/>
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
